--- a/finalassignment.html
+++ b/finalassignment.html
@@ -28,7 +28,7 @@ $(document).ready(function(){
 </nav>
 
 <h2>Top five foods to eat on vacation</h2>
-<img src="C:\Users\emily\OneDrive\Documents\E-learning Developer\DEV103 HTML Course\assortment-different-fruits-berries-flat-260nw-1395910394.webp"
+![This is an image] (https://raw.githubusercontent.com/ebtestprogram/ebtestprogramfinalassignment.github.io/main/markdown/images.jpg)
 alt="image of different kinds of fruit">
 <table class="table table-dark table-striped">
 <tr>
