--- a/finalassignment.html
+++ b/finalassignment.html
@@ -6,7 +6,7 @@
 	<meta name= "viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <!--Bootstrap CSS-->
  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-<link rel="stylesheet" href='index.css' type='text'>	
+<link rel="stylesheet" type="text/css" href=/css/main.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script>
 $(document).ready(function(){
