--- a/finalassignment.html
+++ b/finalassignment.html
@@ -24,7 +24,9 @@ $(document).ready(function(){
 <nav class="nav nav-pills nav-justified">
   <a class="nav-link active" aria-current="page" href="finalassignmentp1.html">Recipes</a>
   <a class="nav-link" href="finalassignmentp2.html">Vacation Spots</a>
-  <a class="nav-link" href="https://www.verywellfit.com/fitness-motivation-4157145">Motivation</a>
+  <a class="nav-link" href="finalassignmentp3.html">Motivation</a>
+ <a class="nav-link" href="finalassignmentp4.html">Travel Tips</a>
+						  <a class="nav-link"href="finalassignmentp5.html">Travel Outfits</a>						  
 </nav>
 
 <h2>Top five foods to eat on vacation</h2>
